fix: init thread pool